--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-functions-hw-drilling",
   "version": "1.0.0",
   "description": "Homework assignment -- practice creating functions.",
-  "main": "index.js",
+  "main": "hw.js",
   "scripts": {
     "test": "mocha spec/hw-spec.js"
   },
@@ -14,6 +14,7 @@
   "author": "Matt Brendzel (matt.brendzel@generalassemb.ly)",
   "license": "GPL-3.0",
   "dependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
